# paper_lark_agents

./: .env.claude.example  .env.claude2.example  .env.codebuddy.example  .env.codex.example  .env.codex2.example  .env.example  .env.gpt-pro  .gitignore  CLAUDE.md  MIGRATION.md  README.md  pyproject.toml
migration_data/sts2/: claude-e6d7caac.jsonl  codex-019e958a.jsonl  room-memory.jsonl
paper_lark_agents/: __init__.py  agent_runner.py  app.py  artifacts.py  cli.py  config.py  daemon.py  effort.py  gpt_pro_agent.py  handoff.py  hy3.py  inbound_files.py  interactive.py  lark_cli.py  lark_sdk.py  memory.py  models.py  outbox.py  pending_runs.py  prompts.py  responders.py  router.py  status_card.py  status_dashboard.py  tmux_runtime.py  transcripts.py  turn_card.py  web_dashboard.py  workspace.py
tests/: test_app_handoff.py  test_app_responder.py  test_app_turncard.py  test_app_workspace.py  test_artifacts.py  test_cli.py  test_config.py  test_effort.py  test_hy3.py  test_inbound_files.py  test_interactive.py  test_lark_events.py  test_memory.py  test_models.py  test_outbox.py  test_responders.py  test_router.py  test_status_dashboard.py  test_tmux_runtime.py  test_transcripts.py  test_workspace.py
